--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "@tailwindcss/forms": "^0.5.2",
         "@vitejs/plugin-vue": "^3.0.0",
         "autoprefixer": "^10.4.2",
-        "axios": "^0.27",
+        "axios": "^0.27.2",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
@@ -21,6 +21,8 @@
     },
     "dependencies": {
         "maska": "^1.5.0",
-        "v-mask": "^2.3.0"
+        "sweetalert2": "^11.5.1",
+        "v-mask": "^2.3.0",
+        "vee-validate": "^4.7.0"
     }
 }
