--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
+        "@brazilian-utils/brazilian-utils": "^1.0.0-rc.12",
         "maska": "^1.5.0",
         "sweetalert2": "^11.5.1",
         "v-mask": "^2.3.0",
